--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-template",
+  "name": "iGen-Tech",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -24,13 +24,16 @@
     "@heroui/use-theme": "2.1.9",
     "@react-aria/visually-hidden": "3.8.25",
     "@react-types/shared": "3.30.0",
+    "@tanstack/react-query": "^5.81.2",
+    "axios": "^1.10.0",
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.23.0",
     "tailwind-variants": "0.3.0",
-    "tailwindcss": "3.4.16"
+    "tailwindcss": "3.4.16",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
