--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroui/link": "2.2.19",
     "@heroui/navbar": "2.2.20",
     "@heroui/snippet": "2.2.23",
+    "@heroui/spinner": "^2.2.19",
     "@heroui/switch": "2.2.20",
     "@heroui/system": "2.4.18",
     "@heroui/theme": "2.4.17",
